- fixed "Project Card" z-index issue on mobile. - changed header nav to use flexbox. - added min-height to header. - made HeaderAlt component for 404 and submission pages. - added js element check for menu toggle and nav.

--- a/src/styles/components/_project-card-list.scss
+++ b/src/styles/components/_project-card-list.scss
@@ -66,6 +66,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       color: $c-white;
+      z-index: 1;
 
       &::before {
         background: $c-black-50;
@@ -112,6 +113,7 @@
       color: $c-white;
       font-size: 1.5rem;
       line-height: 2rem;
+      z-index: 2;
 
       > * {
         margin: 0.5rem 0;
